# eval-card-registry

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  NOTICES.md  README.md  docker-compose.yml  pyproject.toml
curation/: UPSTREAM_DATA_ISSUES.md  audit_bad_nearmiss.json  eee_modelsdev_rescues.json  hf_model_id_resolution.json  hub_stats_frozen.parquet  inference_platforms.proposed.json  modelsdev_underlying_index.json  rehost_repoint.json
deploy/: END_TO_END.md  push-to-space.sh
examples/: minimal_client.py
fixtures/: README.md  display_overrides.yaml  manifest.json  slice_overrides.yaml
scripts/: build_hub_stats_index.py  dedup_cross_source_aliases.py  fold_modelsdev_dupes.py  freeze_hub_stats_cache.py  generate_hf_oracle_seed.py  generate_inference_platforms_seed.py  generate_tier3_inferred_seed.py  ground_sweep_cases.py  integrate_modelsdev_catalog.py  m10_b3_01_multisize_split.py  m10_b3_04_deferred_own.py  m10_fin_bareids.py  m10_fin_bareids_tail.py  m10_fin_casing.py  m10_fin_medium_alias.py  m10_fin_mode_reclass.py  m10_link_session_mints.py  m10_rehost_repoint.py  m10_sweep_repoints.py  m10_t4_id_fixes.py  m10_t6_slugify_agents.py  m10_unsure_batch1.py  m10_unsure_batch2.py  m10_unsure_oddballs.py  publish_registry_data.py  refresh_from_hub_stats.py  refresh_from_modelsdev.py  regenerate_sources.sh  scan_eee_entities.py  scan_eee_models.py  validate_eee_sample.py  verify_sync.py
seed/: benchmarks.yaml  composites.yaml  display_overrides.yaml  families.yaml  harnesses.yaml  inference_platforms.yaml  metrics.yaml  models.yaml  orgs.yaml  (+4 more)
(+95 files in other folders)
