[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "eval-card-registry"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "pandas>=2.2.0",
    "pyarrow>=16.0.0",
    "huggingface-hub>=0.23.0",
    "datasets>=2.19.0",
    "pyyaml>=6.0",
    "eval-entity-resolver",
]

[project.scripts]
eval-card-registry = "eval_card_registry.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/eval_card_registry"]

[tool.uv.workspace]
members = ["packages/eval-entity-resolver"]

[tool.uv.sources]
eval-entity-resolver = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests", "packages/eval-entity-resolver/tests"]
